# apparatus-stellatus

./: Cargo.toml
src/: main.rs
src/model/: aisle.rs  battery.rs  charger.rs  corner.rs  dock.rs  edge.rs  location.rs  mod.rs  robot.rs
src/plugins/: mod.rs  scenario_plugin.rs
src/reader/: mod.rs  parser.rs
src/reader/dtos/: aisle_dto.rs  battery_dto.rs  charger_dto.rs  dock_dto.rs  edge_dto.rs  mod.rs  robot_dto.rs  warehouse_dto.rs
src/resources/: sample.json
